# FluxDown

./: .gitignore  AGENTS.md  README.md  pubspec.yaml
.github/workflows/: build-extension.yml  deploy-website.yml  release.yml  triage.yml
.omp/rules/: windows-no-console-window.md
.omp/skills/release/: SKILL.md
android/app/: build.gradle.kts
assets/i18n/: en.json  zh.json
docker/: server.Dockerfile
fluxDown/: package.json  wxt.config.ts
fluxDown/entrypoints/: background.ts  fetch-interceptor.ts  resource-detector.content.ts
fluxDown/utils/: i18n.ts  native-messaging.ts  resource-store.ts  resource-types.ts  settings.ts
ios/Runner/: AppDelegate.swift
lib/: main.dart
linux/: com.fluxdown.app.desktop
linux/runner/: CMakeLists.txt  floating_ball_window.cc  floating_ball_window.h  my_application.cc
macos/Runner/: AppDelegate.swift  FloatingBallPanel.swift  Info.plist  MainFlutterWindow.swift
macos/Runner.xcodeproj/: project.pbxproj
native/cli/: Cargo.toml
native/engine/: Cargo.toml
native/fluxdown_updater/: Cargo.toml
native/hub/: Cargo.toml  build.rs
promotion/: README.md
promotion/mcp/: server.json
scripts/: email_preview.html  email_template.html  package.json  release_tag.py  tsconfig.json
test/: mobile_segment_fills_test.dart  number_selector_test.dart  widget_test.dart
web/src/: design.css
website/: .env.example  deploy.sh
website/public/: openapi.json
windows/runner/: CMakeLists.txt  floating_ball_drop_target.cpp  floating_ball_drop_target.h  flutter_window.cpp  flutter_window.h  main.cpp  win32_window.cpp
(+189 files in other folders)
