[package]
name = "fluxdown_cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "fluxdown"
path = "src/main.rs"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
wildcard_imports = "deny"

[dependencies]
clap = { version = "4.6.1", features = ["derive", "env"] }
directories = "6.0.0"
fluxdown_api = { version = "0.1.0", path = "../api" }
reqwest = { version = "0.12", default-features = false, features = ["json", "charset"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
toml = "1.1.2"

# TLS 后端按平台区分（对齐 engine/hub）：Windows 用系统 Schannel（native-tls），
# 其余平台用 rustls，避免 musl 静态交叉编译时找不到系统 OpenSSL
[target.'cfg(windows)'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "charset", "native-tls"] }

[target.'cfg(not(windows))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "charset", "rustls-tls-native-roots"] }
